fixed the gap in slider

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,10 +20,24 @@ html {
   scroll-behavior: smooth;
 }
 
-@media screen and (min-width: 1024px) {
-  
+@media  (min-width: 1285px ) {
+
   .swiper-wrapper{
-    margin-left: 6%;
+    margin-left: 4%;
+  }
+}
+
+@media  (max-width: 1200px ) {
+
+  .swiper-wrapper{
+    margin-left: 10%;
+  }
+}
+
+@media  (max-width: 900px ) {
+
+  .swiper-wrapper{
+    margin-left: 1%;
   }
 }
 
